# controller-api/src/main/java/io/hyperfoil/controller/Client.java
@@ -52,7 +52,7 @@ public interface Client {
 
       RunRef start(String description);
 
-      String structure();
+      String structure(Integer maxCollectionSize);
    }
 
    class BenchmarkSource {
